--- a/2009-spring/181.004/rec-01-20-2009/Makefile
+++ b/2009-spring/181.004/rec-01-20-2009/Makefile
@@ -1,7 +1,13 @@
-f=quiz
+f1=quiz
+f2=recitation
 
-all:
-	pdflatex $f.tex
+all: $(f1).pdf $(f2).pdf
+
+$(f1).pdf: $(f1).tex
+	pdflatex $(f1).tex
+
+$(f2).pdf: $(f2).tex
+	pdflatex $(f2).tex
 
 clean:
-	rm -f $f.aux $f.log
+	rm -f $(f1).aux $(f1).log $(f2).aux $(f2).log
